// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Border Processors > should process border correctly > border 1`] = `
"// Generated SCSS Variables
$border-size-primary: 0.25rem;
$border-primary: #687879;

// Generated SCSS Mixins
@mixin position-inside-custom {
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
}
@mixin position-center-custom {
  border: $border-size-primary solid $border-primary;
}
@mixin position-outside-custom {
  outline: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border correctly > border 2`] = `
"// Generated SCSS Variables
$border-size-primary: 0.25rem;
$border-primary: #687879;

// Generated SCSS Mixins
@mixin position-inside-custom {
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
}
@mixin position-center-custom {
  border: $border-size-primary solid $border-primary;
}
@mixin position-outside-custom {
  outline: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border radius correctly > border-radius 1`] = `
"// Generated SCSS Variables
$colors-primary-brand-teal-teal-800: #00464a;
$corner-radius-primary: 1rem;
$size-null: 0rem;

// Generated SCSS Mixins
@mixin border-radius-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $corner-radius-primary;
}
@mixin border-radius-topright-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $size-null $corner-radius-primary $size-null $size-null;
}
@mixin border-radius-bottomright-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $size-null $size-null $corner-radius-primary;
}
@mixin border-radius-topleft-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $corner-radius-primary $size-null $size-null;
}
@mixin border-radius-bottomleft-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $size-null $size-null $size-null $corner-radius-primary;
}
@mixin border-radius-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 1rem;
}
@mixin border-radius-topright-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 0 1rem 0 0;
}
@mixin border-radius-bottomright-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 0 0 1rem;
}
@mixin border-radius-topleft-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 1rem 0 0;
}
@mixin border-radius-bottomleft-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 0 0 0 1rem;
}
"
`;

exports[`Border Processors > should process border radius correctly > border-radius 2`] = `
"// Generated SCSS Variables
$colors-primary-brand-teal-teal-800: #00464a;
$corner-radius-primary: 1rem;
$size-null: 0rem;

// Generated SCSS Mixins
@mixin border-radius-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $corner-radius-primary;
}
@mixin border-radius-topright-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $size-null $corner-radius-primary $size-null $size-null;
}
@mixin border-radius-bottomright-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $size-null $size-null $corner-radius-primary;
}
@mixin border-radius-topleft-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $corner-radius-primary $size-null $size-null;
}
@mixin border-radius-bottomleft-variable {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: $size-null $size-null $size-null $corner-radius-primary;
}
@mixin border-radius-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 1rem;
}
@mixin border-radius-topright-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 0 1rem 0 0;
}
@mixin border-radius-bottomright-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 0 0 1rem;
}
@mixin border-radius-topleft-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 1rem 0 0;
}
@mixin border-radius-bottomleft-custom {
  background: $colors-primary-brand-teal-teal-800;
  border-radius: 0 0 0 1rem;
}
"
`;

exports[`Border Processors > should process border shape correctly > border-shape 1`] = `
"// Generated SCSS Variables
$border-size-primary: 0.25rem;
$border-primary: #687879;

// Generated SCSS Mixins
@mixin shape-rectangle {
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
}
@mixin shape-rounded-rectangle {
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
  border-radius: 1.25rem;
}
@mixin shape-ellipse {
  border: $border-size-primary solid $border-primary;
  box-shadow: inset 0 0.25rem 0 0 $border-primary, inset -0.25rem 0 0 0 $border-primary, inset 0 -0.25rem 0 0 $border-primary, inset 0.25rem 0 0 0 $border-primary;
  border-radius: 50%;
}
@mixin shape-line-curved {
  border: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border shape correctly > border-shape 2`] = `
"// Generated SCSS Variables
$border-size-primary: 0.25rem;
$border-primary: #687879;

// Generated SCSS Mixins
@mixin shape-rectangle {
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
}
@mixin shape-rounded-rectangle {
  box-shadow: inset 0 $border-size-primary 0 0 $border-primary, inset (-$border-size-primary) 0 0 0 $border-primary, inset 0 (-$border-size-primary) 0 0 $border-primary, inset $border-size-primary 0 0 0 $border-primary;
  border-radius: 1.25rem;
}
@mixin shape-ellipse {
  border: $border-size-primary solid $border-primary;
  box-shadow: inset 0 0.25rem 0 0 $border-primary, inset -0.25rem 0 0 0 $border-primary, inset 0 -0.25rem 0 0 $border-primary, inset 0.25rem 0 0 0 $border-primary;
  border-radius: 50%;
}
@mixin shape-line-curved {
  border: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border sides correctly > border-sides 1`] = `
"// Generated SCSS Variables
$border-size-primary: 0.25rem;
$size-null: 0rem;
$border-primary: #687879;
$size-16: 1rem;

// Generated SCSS Mixins
@mixin border-center-solid-custom-topleft {
  border-top: 0.125rem solid #869597;
  border-left: 0.125rem solid #869597;
}
@mixin border-center-solid-custom-top {
  border: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-topleft {
  border-top: $border-size-primary solid $border-primary;
  border-left: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-variable-top {
  border: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-left {
  border-right: 0.5rem solid #869597;
  border-left: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-left {
  border-right: $size-16 solid $border-primary;
  border-left: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-right {
  border-right: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-right {
  border-right: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-bottom {
  border-bottom: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-bottom {
  border-bottom: $border-size-primary solid $border-primary;
}
"
`;

exports[`Border Processors > should process border sides correctly > border-sides 2`] = `
"// Generated SCSS Variables
$border-size-primary: 0.25rem;
$size-null: 0rem;
$border-primary: #687879;
$size-16: 1rem;

// Generated SCSS Mixins
@mixin border-center-solid-custom-topleft {
  border-top: 0.125rem solid #869597;
  border-left: 0.125rem solid #869597;
}
@mixin border-center-solid-custom-top {
  border: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-topleft {
  border-top: $border-size-primary solid $border-primary;
  border-left: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-variable-top {
  border: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-left {
  border-right: 0.5rem solid #869597;
  border-left: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-left {
  border-right: $size-16 solid $border-primary;
  border-left: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-right {
  border-right: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-right {
  border-right: $border-size-primary solid $border-primary;
}
@mixin border-center-solid-custom-bottom {
  border-bottom: 0.125rem solid #869597;
}
@mixin border-center-solid-variable-bottom {
  border-bottom: $border-size-primary solid $border-primary;
}
"
`;
